# rs-prng

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: atomic_prng.rs  lib.rs  prng.rs  thread_prng.rs
tests/: test.rs
