[package]
name = "pseudo_random"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["pseudo_random"]
description = "pseudo random number generator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-pseudo_random.git"
homepage = "https://github.com/nathanfaucett/rs-pseudo_random"


[features]
thread_prng = []

[dependencies]
rng = {git = "https://github.com/nathanfaucett/rs-rng.git"}

[dev-dependencies]
rand = "0.3"
